--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">=0.12"
   },
-  "description": "like Promise.cast with a delay in milliseconds",
+  "description": "like Promise.resolve with a delay in milliseconds",
   "keywords": [
     "promise",
     "timeout",
